--- a/EasyChat/Views/Pages/SettingView.axaml
+++ b/EasyChat/Views/Pages/SettingView.axaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="EasyChat.Views.Pages.SettingView"
+﻿<UserControl x:Class="EasyChat.Views.Pages.SettingView"
              xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,6 +14,8 @@
     <UserControl.Resources>
         <converts:EqualityMultiConverter x:Key="EqualityMultiConverter" />
         <converts:ColorToHexConverter x:Key="ColorToHexConverter" />
+        <converts:DeliveryModeToBoolConverter x:Key="DeliveryModeToBoolConverter" />
+        <converts:DeliveryModeToStringConverter x:Key="DeliveryModeToStringConverter" />
     </UserControl.Resources>
     <UserControl.Styles>
         <Style Selector="suki|GlassCard.ModelCard StackPanel.ActionButtons">
@@ -787,11 +789,67 @@
                                         </Button>
                                     </StackPanel>
                                 </DockPanel>
+
+                                <Separator Opacity="0.1" />
+
+                                <!-- Font Color -->
+                                <DockPanel>
+                                    <TextBlock Text="{x:Static lang:Resources.FontColor}"
+                                               VerticalAlignment="Center" FontWeight="Bold" />
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="10">
+                                        <TextBox Text="{Binding InputConf.FontColor}"
+                                                 Watermark="#FFFFFFFF"
+                                                 Width="120" VerticalAlignment="Center"/>
+                                        <Button Width="35" Height="35" CornerRadius="20" BorderThickness="1" BorderBrush="#33000000">
+                                            <Button.Background>
+                                                <SolidColorBrush Color="{Binding InputConf.FontColor, Converter={StaticResource ColorToHexConverter}}"/>
+                                            </Button.Background>
+                                            <Button.Flyout>
+                                                <Flyout Placement="Bottom">
+                                                    <Border CornerRadius="10" Padding="10" Background="{DynamicResource SukiCardBackground}">
+                                                        <ColorView Color="{Binding InputConf.FontColor, Converter={StaticResource ColorToHexConverter}}" 
+                                                                   IsAlphaEnabled="True" ColorSpectrumShape="Ring" />
+                                                    </Border>
+                                                </Flyout>
+                                            </Button.Flyout>
+                                        </Button>
+                                    </StackPanel>
+                                </DockPanel>
+
+                                <Separator Opacity="0.1" />
+
+                                <!-- Delivery Mode -->
+                                <DockPanel>
+                                    <TextBlock Text="{x:Static lang:Resources.InputDeliveryMode}"
+                                               VerticalAlignment="Center" FontWeight="Bold" />
+                                    <ComboBox ItemsSource="{Binding InputDeliveryModes}"
+                                              SelectedItem="{Binding InputConf.DeliveryMode}"
+                                              HorizontalAlignment="Right" MinWidth="200">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Converter={StaticResource DeliveryModeToStringConverter}}"/>
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                </DockPanel>
+
+                                <Separator Opacity="0.1" />
+
+                                <!-- Key Send Delay (Linked to DeliveryMode) -->
+                                <DockPanel IsVisible="{Binding InputConf.DeliveryMode, Converter={StaticResource DeliveryModeToBoolConverter}}">
+                                    <TextBlock Text="{x:Static lang:Resources.KeySendDelay}"
+                                               VerticalAlignment="Center" FontWeight="Bold" />
+                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Spacing="10">
+                                        <NumericUpDown Value="{Binding InputConf.KeySendDelay}"
+                                                       Minimum="0" Maximum="1000" Increment="10"
+                                                       FormatString="N0" Width="150" />
+                                        <TextBlock Text="ms" VerticalAlignment="Center" Opacity="0.6" Width="30" />
+                                    </StackPanel>
+                                </DockPanel>
                             </StackPanel>
                         </suki:GlassCard>
                     </suki:SettingsLayoutItem.Content>
                 </suki:SettingsLayoutItem>
-
             </objectModel:ObservableCollection>
         </suki:SettingsLayout.Items>
     </suki:SettingsLayout>
